[package]
name = "driftwood"
version = "0.0.6"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "a log on the tide"
keywords = ["tide", "logger"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/driftwood"


[dependencies]
tide = "0.16.0"
chrono = "0.4.19"
colored = "2.0.0"
size = "0.4.0"
